Fix most cases of form title overlay bleeding onto slide

--- a/styles/demo-default.css
+++ b/styles/demo-default.css
@@ -253,7 +253,7 @@
     position: absolute;
     background-color: #4B4B4B;
     color: white;
-    width: 16.7rem;
+    max-width: 16.7rem;
     height: 3.3rem;
     align-self: flex-start;
     align-items: center;
